# ai-bug-resolver

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml
docs/: ADDING-TOOLS.md  ARCHITECTURE.md  SECURITY.md
mcp-server/: pyproject.toml
mcp-server/mcp_server/: __init__.py  config.py  config_infra.py  guardrails.py  guardrails_infra.py  logging.py  server.py  webhook.py  webhook_jenkins.py
mcp-server/mcp_server/tools/: bitbucket.py  jenkins.py  jira.py  notification.py  server.py
mcp-server/tests/: conftest.py  test_guardrails.py  test_jenkins.py  test_server.py  test_tools.py
openclaw-config/: system-prompt-infra.md  system-prompt.md  tool-policy-infra.json  tool-policy.json
