[project]
name = "mcp-server"
version = "0.1.0"
description = "AI Bug Resolver MCP server exposing Jira, Bitbucket, and notification tools"
requires-python = ">=3.12"
authors = [{ name = "AI Bug Resolver Team" }]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
    "fastapi>=0.111.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "respx>=0.21.0",
]

[project.scripts]
mcp-server = "mcp_server.server:main"
mcp-webhook = "mcp_server.webhook:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]
